--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^5.1.2
+  shared_preferences: ^2.1.1
+  jwt_decoder: ^2.0.1
+
 
 dev_dependencies:
   flutter_test:
