--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   dio: ^5.1.2
   shared_preferences: ^2.1.1
   jwt_decoder: ^2.0.1
+  intl: ^0.18.1
+  url_launcher: ^6.1.12
 
 
 dev_dependencies:
